package patterns.structural.adapter;

public interface TurkishPowerSource {
	
	public void providePowerAt220V();
	
	public void turnOn();
	
	public void turnOff();

}
