package patterns.structural.adapter;

public interface USPowerSource {
	
	public void providePowerAt110V();

	public void pushSwitch();
}
